test_src/compiler_errors/types/binary/XorFloatError1.b
class XorFloatError1 {
    void test() {
        println(42 ^ 14.0f);
    }
}
